--- a/content/blog/2017-12-06-Introducing_geniusr.Rmd
+++ b/content/blog/2017-12-06-Introducing_geniusr.Rmd
@@ -7,31 +7,63 @@ tags: ["R", "Package", "Genius", "API"]
 
 ```{r setup, include=FALSE}
 # markdown setup
-knitr::opts_chunk$set(cache=TRUE, echo = FALSE, tidy = TRUE, warning = FALSE, message = FALSE, out.width = '100%', dpi = 180)
+knitr::opts_chunk$set(cache=TRUE, echo = FALSE, tidy = TRUE, warning = FALSE, message = FALSE, 
+                      out.width = '100%', dpi = 180)
 
 # load pkgs
 # devtools::install_github("ewenme/geniusr")
 library(geniusr)
 library(tidyverse)
 library(tidytext)
+library(ggplot2)
+library(waffle)
+library(extrafont)
 ```
 
 I made a new R package (`r emo::ji("fire")` `r emo::ji("package")` `r emo::ji("fire")`) this week. My [sophomore post here](https://ewenme.rbind.io/blog/2017-03-20-kanye_sentiment_analysis/) (from way back in March) was a text-based analysis of Kanye West records, which exposed me to the [Genius](https://genius.com/) API[^documentation] treasure trove once I wanted to get hold of lyrical content. In the process, I'd written some functions for playing nicely with this API in R that would probably be handy for others dabbling/wanting to dabble in similar matters. Since then, I've found a window of time to build on and consolidate this work into a well-rounded package. `geniusr` is now available on CRAN (with the dev version sat on GitHub [here](https://github.com/ewenme/geniusr). Time for the tour.[^admin] 
 
 ## Searchin'
 
-The Genius API's search capabilities allows for users to scan all hosted content on the site (i.e. all songs). A couple of quick implementations exist in the package for retrieving artist (`search_artist()`) and song (`search_song()`) matches for search terms. Let's start by looking for songs brought back by a simple search for "Hennessey".
+The Genius API's search capabilities allows for users to scan all hosted content on the site (i.e. all songs). A couple of quick implementations exist in the package for retrieving artist (`search_artist()`) and song (`search_song()`) matches for search terms. Let's start by looking for songs brought back by a simple search for "Versace".
 
 ```{r song_search}
-search_song(search_term = "Hennessey", n_results = 50)
+versace_search <- search_song(search_term = "Versace")
 ```
 
 ## Goin' Meta
 
-Wanna bring back some fuller information about a particular song (`get_song_meta()`), artist (`get_artist_meta()`) or album (`get_album_meta()`)? Well, now you can. Let's test one out - how about a Hennessey-themed track from our last search.
+Wanna bring back some fuller information about a particular song (`get_song_meta()`), artist (`get_artist_meta()`) or album (`get_album_meta()`)? Well, now you can. Let's test one out - how about investigating a classic Versace-themed track from our last search, 'Versace' by Migos.
 
 ```{r song_meta}
-get_song_meta(song_id = 6596) %>% glimpse
+versace_meta <- get_song_meta(song_id = versace_search$song_id[5]) %>% glimpse
 ```
 
+With this metadata, we can easily pull up the song's artwork, for example. Why not.
 
+```{r artwork}
+knitr::include_graphics(path = versace_meta$song_art_image_url)
+```
+
+## Lyrics for Lyrics, Calm
+
+The package allows you to grab lyrics for tracks real quick, using the `scrape_lyrics_id()` (or `scrape_lyrics_url()`) function.[^scrape] While we're at it, let's call on `tidytext` and answer a question for the people - *just how much were the Migos chatting about "Versace" in 'Versace'?*
+
+```{r lyrics, warning=FALSE}
+# get words proportion representation
+versace_prop <- scrape_lyrics_url(versace_meta$song_lyrics_url) %>%
+  unnest_tokens(word, line) %>%
+  count(word) %>%
+  mutate(proportion = n / sum(n)) %>%
+  # was the word versace or the rest
+  mutate(versace_or_the_rest=if_else(word == "versace", "Versace", "Not Versace")) %>%
+  group_by(versace_or_the_rest) %>%
+  summarise(proportion=sum(proportion)*100)
+
+# waffle plot
+parts <- c("Not Versace" = versace_prop$proportion[[1]],
+           "Versace" = versace_prop$proportion[[2]])
+
+waffle(parts, rows = 8, size = 1, colors = c("#3C3A32", "#E3BD08"), use_glyph = "volume-up", glyph_size = 10, legend_pos = "bottom", title = "How Much Versace was in Migos' 'Versace'?")
+```
+
+When the Migos were speaking in their track 'Versace', they were saying the word "Versace" 32.5% of the time. Phew.
