--- a/content/blog/hacking-homelessness-pdf-prisons.Rmd
+++ b/content/blog/hacking-homelessness-pdf-prisons.Rmd
@@ -30,7 +30,7 @@ You had me at compelling (I'm not sure *who* had me exactly, this was the only e
 
 ## Hex Democratization 
 
-Enter [`geogrid`](https://github.com/jbaileyh/geogrid) and a solution to the perennial information communication problem of plotting polygons of different sizes, that's equal parts functional and beautiful. In the link above the author, Joseph Bailey, eloquently explains the motivations behind this package for automatic transformations of geospatial polygons into regular and hexagonal grids. In short, a grid system ensures a fairer representation of spatial data (while retaining geography) and an automated implementation means this is suitable to use in less commonly studied places. On both counts, this is a wicked example of building tools that democratize good data science. `r emo::ji("hands")`
+Enter [`geogrid`](https://github.com/jbaileyh/geogrid) and a solution to the perennial information communication problem of plotting polygons of different sizes, that's equal parts functional and beautiful. In the link above the author, Joseph Bailey, eloquently explains the motivations behind this package for automatic transformations of geospatial polygons into regular and hexagonal grids. In short, a grid system ensures a fairer representation of spatial data (while retaining geography) and an automated implementation means this is suitable to use in less commonly studied places. On both counts, this is a wicked example of building tools that democratize good data science. `r emo::ji("hand")`
 
 Next, I just needed a good reason to wheel it out (aside from sharing with y'all).[^fullcode] 
 
