--- a/content/blog/2018-05-11-bathing-tapes-vol-one.Rmd
+++ b/content/blog/2018-05-11-bathing-tapes-vol-one.Rmd
@@ -7,12 +7,12 @@ tags: ["mixes", "bathing-tapes"]
 cover: https://img.buzzfeed.com/buzzfeed-static/static/2016-09/7/13/asset/buzzfeed-prod-web03/sub-buzz-17815-1473269426-1.jpg
 ---
 
-Last month I recorded a studio mix, the first volume of an occasional series for sharing sounds I'm bumping. I'm calling it *bathing tapes* (don't sue me, [Nigo](https://en.wikipedia.org/wiki/Nigo)), 'cos most of the jams shouldn't sound out of place (or should enhance) if you so decide to give it a spin during an exfoliation session. If not, enjoy the soothing vibes inside wherever you find yourself.
+Last month I recorded a studio mix at home on the 1210s, the first volume of an occasional series for me to share sounds I'm bumping heavy. I'm calling it *bathing tapes* (don't @ me, [Nigo](https://en.wikipedia.org/wiki/Nigo)), 'cos most of the jams won't sound out of place during an extended exfoliation session. but you should enjoy the soothing vibes wherever you're at. Find experimental techno diversions, Houston hip-hop, ethereal footwork waves, bleepy dancehall and more sweet infusions inside.
 
 <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/434633817&color=%231d191f&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 
-Credit and thank you to all the creators of these tracks. Full tracklist over on [soundcloud](https://soundcloud.com/3w3n/bathing-tapes-vol-one) but some new artists in there you should go check for... [object blue](https://objectblue.carrd.co/), [Ciel](https://soundcloud.com/cl_lit), [DJ Python](https://soundcloud.com/wnkrs) to name a few.
+All credit and thank you to the creators of these tracks. Full tracklist over on [soundcloud](https://soundcloud.com/3w3n/bathing-tapes-vol-one) `r emo::ji("eyes")` but some new artists in there you should go check for... [object blue](https://objectblue.carrd.co/), [Ciel](https://soundcloud.com/cl_lit), [DJ Python](https://soundcloud.com/wnkrs) to name a few.
 
-This is something of a break from the usual content I have posted here. In 2017, I started this blog to write about and share examples of my work in data science/data sci-adjacent areas. The work of [Yihui](https://yihui.name/) in creating [blogdown](https://github.com/rstudio/blogdown) made it a pleasure to share technical posts and give back to the [R](https://www.r-project.org/) community, something I did with regularity last year.
+This is something of a break from the usual content I have posted here. In 2017, I started this blog to write about and share examples of my work in data science/data sci-adjacent areas. The work of [Yihui](https://yihui.name/) in creating [blogdown](https://github.com/rstudio/blogdown) made it fun to share technical posts and give back to the [R](https://www.r-project.org/) community, something I did with regularity last year.
 
-This year, I have consciously put less pressure on myself to force through ideas (noticeable from the date of my last post), and during that time I've spent more time on other passions like the one above. I want to use this site to document my creations, whatever the medium (and likely audience) and without hang-ups about the Personal Brand^TM^. Tune in and tune out when it feels good `r emo::ji("star2")`
+This year, I have consciously put less pressure on myself to force through ideas (noticeable from the date of my last post), and I've dedicated more time on other crafts and passions, following creative thoughts naturally. I want to use this site to document all my creations, whatever the medium (and likely audience) and without hang-ups about the Personal Brand^TM^. So, tune in and tune out when it feels good `r emo::ji("star2")`
